app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require jquery-ui/draggable
 *= require jquery-ui/resizable
 *= require jquery-ui/slider
 */

 /* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

@import "bootstrap-sprockets";
@import "bootstrap";

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

html, body, #root, .site, #page-container, .page, #elements {
	height: 100%;
}

#root {
	height: 100%;
  display: absolute;
}

 #elements {
	 height: 100%;
 }

 #page-container:not(.editing) #elements {
	 transform: translateY(-120px);
}

 .navbar {
	 margin-bottom: 0;
 }

 .page {
	 background-repeat: no-repeat;
	 background-size: cover;
	 background-position: center;
 }

 .menu-bar {
   background: #1A1A1A;
   width: 260px;
   height: 100%;
   top: 0px;
   float: left;
   position: relative;
   z-index: 99;
   transition: left 0.5s;
   left: -280px;
 }

 .menu-bar.show {
   left: 0px;
 }

 .menu-button {
	 outline: 2px solid gray;
   width: 50px;
   height: 50px;
   background: #1A1A1A;
   position: absolute;
   top: 25%;
   color: gray;
   border-radius: 3px;
   left: -25px;
   transform: rotate(45deg);
	 z-index: 50;
 }

 .menu-button span {
   font-size: 50px;
   left: 20px;
   top: -5px;
   display: block;
   transform-origin: center;
   transform: rotate(45deg);
   position: relative;
 }

 .elements-menu {
   width: 80px;
	 margin-top: 70px;
   z-index: 1;
   position: relative;
   transform: translateX(50%);
 }

 .pages-menu {
   width: 80px;
   z-index: 1;
	 top: 0;
   position: relative;
   transform: translateX(50%);
 }

 .pages-menu .pages {
	 width: 100%;
 }

 .pages-menu .menu-title {
	 font-size: 30px;
	 position: relative;
	 left: 25%;
 }

 .elements-menu .menu-title{
  font-size: 30px;
	text-align: center;
 }

 .page-properties-menu .menu-title {
	 font-size: 26px;
	 position: relative;
	 text-align: center;
 }

 .site-index-item {
	 width: 300px;
 }

 .site-index-item .site-title {
	 margin-right: 30px;
	 font-weight: bold;
	 font-size: 20px;
 }

 .site-index-item .btn {
	 cursor: pointer;
 }

 .colorpicker .title {
	 background: darkgray;
 }

 #page-container.editing {
   border: 2px solid black;
  //  margin-top: 30px;
 }

 .box {
   background: darksalmon;
   width: 100px;
   height: 100px;
 }

#page-container.editing .element:hover {
  cursor: pointer;
  /*border: 2px dotted black;*/
	outline: 2px dotted black;
}

.element.text.editing {
  background: yellow;
}

.element.text .form {
  background: red;
}

.element.text {
	z-index: 3;
}

.element.link {
	z-index: 3;
}

.ui-wrapper img {
	width: 100%;
	height: 100%;
}

.element-properties-menu {
	background: darkgray;
	z-index: 5;
	position: absolute;
	box-shadow: 1px 1px black;
	border-radius: 5px;
}

.element-properties-menu .btn {
	color: black;
}

.text-element-form {
	position: relative;
	width: 700px;
	height: 200px;
}

.text-element-form textarea {
	position: relative;
	width: 700px;
	top: -60px;
	bottom: 0;
	font-size: 16px;
}

.element-properties-menu .heading {
	color: black;
	font-size: 20px;
	padding: 10px;
}

.element-properties-menu .subheading {
	padding: 10px;
	text-align: center;
}

.element-properties-menu .font-field {
	width: 100%;
}

.element-properties-menu .styles {
	background: white;
	padding: 2px 5px 2px 5px;
	// transform: translateX(25%);
}

.element-properties-menu .menu button {
	font-size: 18px;
	cursor: pointer;
	background: white;
}

.pages-menu.menu {
	transform: translateX(25%);
	margin-top: 20px;
	width: 150px;
	position: relative;
}

.menu {
	width: 150px;
	border-radius: 2px;
}

.page-properties-menu {
	margin-top: 20px;
	position: relative;
	transform: translateX(15%);
}

.page-properties-menu input {
	width: 70%;
	position: relative;
	outline: 0;
	border: 0;
	background: white;
	border: 2px solid gray;
}

.page-properties-menu form {
	padding-left: 10px;
	background: white;
}

.box {
	z-index: 0;
}


.element:not(.box) {
	z-index: 3;
}

.element.image {
	z-index: 2;
}


.text {
	z-index: 5;
}

.line {
	z-index: 3;
}

p.element {
	white-space: pre-line;
}

.menu-bar .menu {
	background: darkgray;
}


#red, #green, #blue {
	 float: left;
	 clear: left;
	 width: 150px;
	 margin: 5px;
 }

 #swatch {
	 width: 60px;
	 height: 50px;
	 margin-top: 18px;
	 margin-left: 180px;
	 background-image: none;
 }

 #red .ui-slider-range { background: #ef2929; }
 #red .ui-slider-handle { border-color: #ef2929; }
 #green .ui-slider-range { background: #8ae234; }
 #green .ui-slider-handle { border-color: #8ae234; }
 #blue .ui-slider-range { background: #729fcf; }
 #blue .ui-slider-handle { border-color: #729fcf; }


 .colorpicker {
	 z-index: 100;
	 position: absolute;
	 width: 300px;
	 height: 150px;
	 background: white;
	 left: 150px;
	 top: 10px;
	 border-radius: 5px;
	 box-shadow: 1px 1px black;
 }

 .landing-panel {
	 padding-top: 10px;
 }

 .colorpicker .save-color {
	 margin-top: 10px;
	 margin-left: 20px;
 }

 .site-index {
	 width: 500px;
	 margin-top: 50px;
	 margin-left: 20px;
 }

 .new-site-button {
	 cursor: pointer;
	 margin-top: -10px;
	 margin-left: 10px;
 }

